# devspace

./: .gitignore  CLAUDE.md  CLAUDE_DESKTOP_TESTS.md  LICENSE  README.md  SETUP_GUIDE.md  medium_to_markdown.py  oci-ops-insight-article.md  run_tests.py  setup_oel9.sh  start.sh  test_article.html
FinOps/: ATTRIBUTION.md  readme.md
FinOps/dashboards/: README.md  cost-by-tag.json  cost-forecast.json  finops-overview.json  reserved-capacity.json
FinOps/docs/: architecture.md  customization.md  manual-setup.md  prerequisites.md  troubleshooting.md
FinOps/function/: func.py  func.yaml  requirements.txt
FinOps/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
app-store-php8.3/: README.md  docker-compose.yml  setup-guide.md
app-store-php8.3/payment/: Dockerfile  composer.json
app-store-php8.3/storefront/: Dockerfile  composer.json
appstore-php8.3/: .gitignore  README.md  composer.json  setup.md
appstore-php8.3/config/: database.php  logger.php  settings.php
appstore-php8.3/public/: index.php
appstore-php8.3/scripts/: init_db.php
audit-log-masking/: README.md  func.py  func.yaml  requirements.txt  verify_masking.py
docs/: PRD.md
logging/audit-log-masking/: README.md
logging/audit-log-masking-part-2/: README.md  func.py  verify_filtering.py
mcp-servers/logan-mcp-server/: README.md  pyproject.toml
monitoring/alarm-history-report/: README.md  oci_alarm_history.py
monitoring/sla-report/: .gitignore  LICENSE  README.md  compute_availability_report.py
oci-log-analytics-mcp/: README.md  SETUP_GUIDE.md  apply_tenancy_fix.sh  pyproject.toml  setup_oel9.sh  update.sh
oci-log-analytics-mcp/src/oci_la_mcp/mcp/: __init__.py  handlers.py  tools.py
oci-log-analytics-mcp/src/oci_la_mcp/oci_client/: client.py
oci-log-analytics-mcp/src/oci_la_mcp/services/: export.py  query_engine.py  schema_manager.py  visualization.py
projects/oci-logan-mcp-server/: KNOWN_ISSUES.md  README.md  SETUP_GUIDE.md  TEST_PLAN.md  diagnose_compartments.py  pyproject.toml  run.sh  run_tests.py  setup_oel9.sh  update.sh  (+1 more)
python-app-demo/: CUSTOMER-GUIDE.md  README.md  generate-traffic.sh
sla-report/: README.md  compute_availability_report.py
(+101 files in other folders)
